Move tutorial.ipynb

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tradestrat import Momentum, Backtest"
+    "from src.tradestrat import Momentum, Backtest"
    ]
   },
   {
